<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edt_name"
        style="@style/edt_style"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/edt_address"
        style="@style/edt_style"
        android:hint="@string/address" />

    <EditText
        android:id="@+id/edt_contact_person"
        style="@style/edt_style"
        android:hint="@string/contact_person" />

    <EditText
        android:id="@+id/edt_contact_no"
        style="@style/edt_style"
        android:hint="@string/contact_no"
        android:inputType="number"
        android:maxLength="10" />

    <EditText
        android:id="@+id/edt_email"
        style="@style/edt_style"
        android:hint="@string/emailid"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edt_agency_code"
        style="@style/edt_style"
        android:hint="@string/agency_code"
        android:maxLength="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/btn_contact"
            style="@style/btn_style"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:text="@string/contact" />
    </LinearLayout>

</LinearLayout>