<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical" >

    <include
        android:id="@+id/rl_top"
        layout="@layout/action_bar"
        />

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="6" >

        <LinearLayout
            android:id="@+id/ll_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_book"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size" />

            <TextView
                android:id="@+id/tv_book"
                style="@style/tv_style_options"
                android:text="@string/books" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_calender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_calender"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size" />

            <TextView
                android:id="@+id/tv_calender"
                style="@style/tv_style_options"
                android:text="@string/calander" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_alert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_alert"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size" />

            <TextView
                android:id="@+id/tv_alert"
                style="@style/tv_style_options"
                android:text="@string/alert" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_edit"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size" />

            <TextView
                android:id="@+id/tv_edit"
                style="@style/tv_style_options"
                android:text="@string/edit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_customerreview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_customerreview"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size" />

            <TextView
                android:id="@+id/tv_customerreview"
                style="@style/tv_style_options"
                android:text="@string/creivew" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_agent"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size" />

            <TextView
                android:id="@+id/tv_agent"
                style="@style/tv_style_options"
                android:text="@string/agent" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_top" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/sp_location"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/select_padding"
                android:layout_marginRight="@dimen/select_padding"
                android:background="@drawable/spin_bg" >
            </Spinner>

            <Spinner
                android:id="@+id/sp_property"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/select_padding"
                android:layout_marginRight="@dimen/select_padding"
                android:background="@drawable/spin_bg_green" >
            </Spinner>

            <RelativeLayout
                android:id="@+id/ll_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/base_padding"
                android:paddingLeft="@dimen/select_padding"
                android:paddingRight="@dimen/select_padding" >
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>